# alcanzai

./: README.md  citation_errors.txt  docker-compose.yml  env.example  project.json  pyproject.toml
discussions/: 01 - highlights of arch convo.md  02 - session summary 1.md  aa - ARCHITECTURE_DISTILLED.md  aa - CROSS_REFERENCE.md  aa - MVP_EVALUATION.md  aa - QUICK_REFERENCE.md  skills thought.md
meta_tracker/: README.md  backup_0108_update.py  update.py
paper_library/: __init__.py  arxiv_fetcher.py  batch_process.py  config.py  grobid_processor.py  markdown_writer.py  models.py  orchestrator.py  state.py  synthesis_generator.py  web_fetcher.py
tests/: test_arxiv.py  test_grobid.py  test_markdown.py  test_pipeline.py  test_synthesis.py
vault/.obsidian/: workspace.json
vault/Batches/: arXiv_tests.md
vault/Papers/: Allen-Zhu et al (2023) - Physics of Language Models - Part 3-1 Knowledge.md  Allen-Zhu et al (2023) - Physics of Language Models - Part 3-2 Knowledge.md  Allen-Zhu et al (2023) - Physics of Language Models - Part 3.1 Knowledge.md  Allen-Zhu et al (2023) - Physics of Language Models - Part 3.2 Knowledge.md  Allen-Zhu et al (2023) - Physics of Language Models Part 3.1, Knowledge St....md  Allen-Zhu et al (2023) - Physics of Language Models Part 3.2, Knowledge Ma....md  Allen-Zhu et al (2024) - Physics of Language Models - Part 3-3 Knowledge.md  Allen-Zhu et al (2024) - Physics of Language Models - Part 3.3 Knowledge.md  Askell et al (2021) - A General Language Assistant as a Laboratory for Ali....md  Vaswani et al (2023) - Attention Is All You Need.md  (+10 more)
(+1 files in other folders)
